# CoconutGraphics

./: .gitignore  CMakeLists.txt  README.md  license.txt
src/: imgui.ini
src/cpp/: Application.cpp  EntryPoint.cpp  HDRloader.cpp  ImGuiRenderer.cpp  OpenGLContext.cpp  Renderer.cpp  Scene.cpp  Shader.cpp
src/include/: Application.h  Camera.h  HDRloader.h  ImGuiRenderer.h  Objects.h  OpenGLContext.h  Renderer.h  Scene.h  Shader.h  Vector.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
